exo_03/dirfile/err
main.cxx: In function ‘size_t donneTailleEnOctets(const string&, const string&)’:
main.cxx:36:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1plus: all warnings being treated as errors
make: *** [main.o] Erreur 1
